--- a/20220607_food court/header.html
+++ b/20220607_food court/header.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Header</title>
     <!-- Boxicons -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
     <!-- style.css  link: 엔터 -->
     <link rel="stylesheet" href="style.css" />
