--- a/20220607_food court/header.html
+++ b/20220607_food court/header.html
@@ -16,6 +16,33 @@
   </head>
   <body>
     <!-- header -->
+    <header class="header" id="header">
+      <nav class="nav container">
+        <div class="nav-toggle">
+          <i class="bx bx-menu"></i>
+        </div>
+        <a href="" class="nav-logo">
+          <i class="bx bxl-facebook"></i>
+        </a>
+
+        <div class="nav-menu">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="" class="nav-link"> HOME </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"> CALENDAR </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"> MAP </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"> BOAR </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
     <!-- main.js   script:src 엔터 -->
     <script src="js/main.js"></script>
