--- a/20220607_food court/header.html
+++ b/20220607_food court/header.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
 
-    <!-- style.css  link: 엔터 -->
-    <link rel="stylesheet" href="style.css" />
+    <!-- style.css -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <!-- header -->
@@ -21,6 +21,7 @@
         <div class="nav-toggle">
           <i class="bx bx-menu"></i>
         </div>
+
         <a href="" class="nav-logo">
           <i class="bx bxl-facebook"></i>
         </a>
@@ -30,21 +31,21 @@
             <li class="nav-item">
               <a href="" class="nav-link"> HOME </a>
             </li>
+
             <li class="nav-item">
-              <a href="" class="nav-link"> CALENDAR </a>
+              <a href="" class="nav-link"> CHALENDER </a>
             </li>
             <li class="nav-item">
               <a href="" class="nav-link"> MAP </a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link"> BOAR </a>
+              <a href="" class="nav-link"> BOARD </a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
-
-    <!-- main.js   script:src 엔터 -->
+    <!-- main.js -->
     <script src="js/main.js"></script>
   </body>
 </html>
