--- a/banibani/thor.html
+++ b/banibani/thor.html
@@ -1,41 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rabit</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Header</title>
+    <!-- Boxicons -->
     <link
-    href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
-    rel="stylesheet"
-  />
-    <link rel="stylesheet" href="css/style.css" />
-</head>
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
-<body>
-  <header class="heaer" id="header">
-    <nav class="nav container" >
-      <div class="nav-menu">
-        <article class="card">
-          <figure class="card-image"></figure>
-          <div class="card-description">
-            <h3 class="card-title">
-              <div class="card-logo">
-                바니바니바니바니 교복교복
-              </div>
-              <hr>
-            </h3>
-            <p class="card-menu">
-              <a href="" class="nav-item">구매/판매</a>
-              <a href="" class="nav-item">교환</a>
-              <a href="" class="nav-item">물려받기</a>
-              <a href="" class="nav-item">구해요</a>
-              <a href="" class="nav-item">로그인</a>  
-            </p>
-          </div>
-        </article>
-    </nav>
-  </header>
+    <!-- style.css -->
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <!-- header -->
+    <header class="header" id="header">
+      <nav class="nav container">
+        <div class="nav-toggle" id="nav-toggle">
+          <i class="bx bx-menu"></i>
+        </div>
+
+        <a href="" class="nav-logo">
+          <i class='bx bxs-heart'></i>
+        </a>
+
+        <div class="nav-menu">
+          <ul class="nav-list" id="nav-list">
+            <li class="nav-item">
+              <a href="" class="nav-link"> 구매/판매 </a>
+            
+            </li>
+
+            <li class="nav-item">
+              <a href="" class="nav-link"> 교환 </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"> 물려받기 </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"> 구해요 </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"> 로그인 </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     
-</body>
+  
+    <!-- main.js -->
+    <script src="js/main.js"></script>
+  </body>
 </html>
